@@ -1,4 +1,6 @@
 Netdiscover 0.3 (Currently working on it / beta4)
+	* If no interface is specified will autoselec firstone available
+	* Better error handling, including interface and id checking
 	* Fixed header checks on configure.in, thanks to Charlie Brady for reporting
 	* Supress sleep time between each arp request, instead sleep between each
 	  network scanned, also caled the hardcore mode :) (like in older betas)
